# Product-Information-Extractor

./: .dockerignore  .env.example  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENCE  Makefile  README.md  TROUBLESHOOTING_OCR.md  app.py  config.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  setup.py  test_imports.py
.github/workflows/: ci.yml
.streamlit/: config.toml
extracted_info/: product1_info.txt
tests/: test_ocr_extraction.py  test_preprocessing.py
utils/: data_export.py  ocr_extraction.py  preprocessing.py  visualisation.py
